--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-PORT=4000
-MONGO_URI=mongodb+srv://admin:test1234@adminside.dg81dvj.mongodb.net/?retryWrites=true&w=majority
-CLOUD_NAME=durortebu
-API_KEY=223645954111782
+PORT=4000 # port where backend run 
+MONGO_URI=mongodb+srv://admin:test1234@adminside.dg81dvj.mongodb.net/?retryWrites=true&w=majority  #LINK SA MONGODB DATABASE
+CLOUD_NAME=durortebu  # CLOUDINARY a cloud storage 
+API_KEY=223645954111782 
 API_SECRET=R6WZOIooopa9JW7-UJLDTSWS7Qg
