--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ MONGO_URI=mongodb+srv://admin:test1234@adminside.dg81dvj.mongodb.net/?retryWrite
 CLOUD_NAME=durortebu  # CLOUDINARY a cloud storage 
 API_KEY=223645954111782 
 API_SECRET=R6WZOIooopa9JW7-UJLDTSWS7Qg
+
+SECRET=jamrandomwords
